<resources>
    <string name="app_name">Aplikasi1</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="text_login">Masuk</string>
    <string name="tab_text_1">Daftar</string>
    <string name="tab_text_2">Masuk</string>
    <string name="tab_text_order_1">Pesanan Masuk</string>
    <string name="tab_text_order_2">Dikonfirmasi</string>
    <string name="tab_text_order_3">Dikirim</string>
    <string name="tab_text_order_4">Telah Sampai</string>
    <string name="tab_text_order_5">Selesai</string>
    <string name="tab_text_order_6">Dibatalkan</string>
    <string name="tab_text_order_7">Dikembalikan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="masuk">Masuk</string>
    <string name="shop_name">Santuylah Shop</string>
    <string name="lorem_ipsum">Lorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting. Lorem Ipsum telah menjadi standar contoh teks sejak tahun 1500an</string>
    <string name="sosial_media">Sosial Media</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>