<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.profil.ShopProfileActivity">

    <TextView
        android:id="@+id/tv_shop_name"
        android:text="@string/shop_name"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/iv_edit"
        android:layout_toEndOf="@+id/tv_shop_name"
        android:src="@drawable/ic_edit"
        android:layout_marginTop="27dp"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/iv_iv_shop"
        android:layout_below="@+id/iv_edit"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_toko"
        android:layout_marginTop="25dp"
        android:layout_width="226dp"
        android:layout_height="170dp"/>

    <TextView
        android:id="@+id/tv_shop_detail"
        android:layout_below="@+id/iv_iv_shop"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/lorem_ipsum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:id="@+id/rellay01"
        android:layout_below="@+id/tv_shop_detail"
        android:background="@drawable/edit_text_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv001"
            android:text="Lokasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_shop_location"
            android:layout_alignParentEnd="true"
            android:text="Panam, Pekanbaru"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv002"
            android:layout_below="@+id/tv001"
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_email_shop"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_shop_location"
            android:text="Santuylah_shop@gmail.com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv003"
            android:layout_below="@+id/tv002"
            android:text="No. Telepon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_shop_number_phone"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_email_shop"
            android:text="082332322323"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@+id/rellay01"
        android:background="@drawable/edit_text_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_social_media"
            android:text="@string/sosial_media"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv004"
            android:layout_below="@+id/tv_social_media"
            android:layout_marginBottom="10dp"
            android:text="Instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/tv_shop_instagram"
            android:layout_below="@+id/tv_social_media"
            android:layout_alignParentEnd="true"
            android:text="Panam, Pekanbaru"
            android:textColor="#878788"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml"/>

        <TextView
            android:id="@+id/tv005"
            android:layout_below="@+id/tv004"
            android:layout_marginBottom="10dp"
            android:text="Twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/tv_shop_twitter"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_shop_instagram"
            android:text="Whatsapp"
            android:textColor="#878788"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml"/>

        <TextView
            android:id="@+id/tv006"
            android:layout_below="@+id/tv005"
            android:layout_marginBottom="10dp"
            android:text="Whatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/tv_shop_whatsapp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_shop_twitter"
            android:text="082332322323"
            android:textColor="#878788"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml"/>

        <TextView
            android:id="@+id/tv007"
            android:layout_below="@+id/tv006"
            android:text="Telegram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/switch04"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_shop_whatsapp"
            android:text="dasdasda"
            android:textColor="#878788"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>

</RelativeLayout>