<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.profil.ShopEditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_shop_name_edit"
            android:text="@string/shop_name"
            android:textSize="25sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/iv_shop_edit"
            android:layout_marginTop="12dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/logo_toko"
            android:layout_width="73dp"
            android:layout_height="55dp"/>

        <Button
            android:id="@+id/btn_edit_pass"
            android:layout_below="@+id/tv_shop_name_edit"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_edit_shop"
            android:textColor="#5A5B5C"
            android:text="Ganti Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_deskripsi_toko"
            android:layout_below="@+id/btn_edit_pass"
            android:text="Deskripsi Toko"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_shop_desc"
            android:layout_below="@+id/tv_deskripsi_toko"
            android:text="@string/lorem_ipsum"
            android:textSize="14sp"
            android:padding="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_"
            android:layout_below="@+id/et_shop_desc"
            android:text="Nomor Telepon"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_number_phone_shop"
            android:layout_below="@+id/tv_"
            android:text="0823-1234-1234"
            android:textSize="15sp"
            android:padding="10dp"
            android:background="@drawable/edit_text_bg"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_1"
            android:layout_below="@+id/et_number_phone_shop"
            android:text="@string/email"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_email_shop"
            android:layout_below="@+id/tv_1"
            android:text="santuylah_shop@gmail.com"
            android:textSize="15sp"
            android:padding="10dp"
            android:background="@drawable/edit_text_bg"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_3"
            android:layout_below="@+id/et_email_shop"
            android:text="Lokasi"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_location_shop"
            android:layout_below="@+id/tv_3"
            android:text="Panam, Pekanbaru"
            android:textSize="15sp"
            android:padding="10dp"
            android:background="@drawable/edit_text_bg"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_instagram"
            android:layout_marginTop="22dp"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/et_location_shop"
            android:text="Instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_instagram_shop"
            android:background="@drawable/edit_text_bg"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:padding="3dp"
            android:text="santuyla_shop"
            android:layout_below="@+id/et_location_shop"
            android:layout_toRightOf="@+id/tv_instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_twitter"
            android:layout_marginTop="22dp"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/tv_instagram"
            android:text="Twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_twitter_shop"
            android:background="@drawable/edit_text_bg"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:padding="3dp"
            android:text="santuyla_shop"
            android:layout_below="@+id/tv_instagram"
            android:layout_toRightOf="@+id/tv_instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_whatsapp_shop"
            android:layout_marginTop="22dp"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/tv_twitter"
            android:text="Whatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_whatsapp_shop"
            android:background="@drawable/edit_text_bg"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:padding="3dp"
            android:text="082332322323"
            android:layout_below="@+id/tv_twitter"
            android:layout_toRightOf="@+id/tv_instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_telegram_shop"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_below="@+id/et_whatsapp_shop"
            android:text="Telegram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_telegram_shop"
            android:background="@drawable/edit_text_bg"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:padding="3dp"
            android:text="082332322323"
            android:layout_below="@+id/et_whatsapp_shop"
            android:layout_toRightOf="@+id/tv_instagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btn_edit_done"
            android:background="@drawable/button_bg"
            android:layout_below="@+id/et_telegram_shop"
            android:textColor="@color/white"
            android:text="Simpan"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</ScrollView>